# chatbot-suporte-estudante

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-Indice.md  06-Proximos-Passos.md
docs/01-Arquitetura/: Arquitetura-Hexagonal-DDD.md  Diagrama-Containers.md  Diagrama-Contexto.md  Visao-Geral.md
docs/01-Arquitetura/Fluxos/: Fluxo-Calendario.md  Fluxo-FAQ-RAG.md  Fluxo-Logging.md  Fluxo-Matricula.md  Fluxo-Mensagem-Generico.md  Fluxo-Pagamentos.md
docs/02-Dominios/: Calendario.md  Conhecimento.md  Conversa.md  Financeiro.md  Matricula.md  Observabilidade.md
docs/03-Integracoes/: Google-Calendar.md  Google-Docs-Drive.md  LLM-Provedores.md  Sistema-Academico.md  Telegram-BotFather.md
docs/04-Operacoes/: Banco-de-Dados.md  Custos-e-Alternativas-Gratuitas.md  Deploy.md  Variaveis-de-Ambiente.md
docs/05-Modelagem/: Glossario-Ubiquo.md  Schema-Banco.md
migrations/: env.py
migrations/versions/: 0001_inicial.py  0002_oauth_unique.py
scripts/: seed_calendario.py  sync_kb.py
src/chatbot/: config.py
src/chatbot/application/calendario/: __init__.py  adicionar_ao_google_calendar.py  concluir_oauth_google.py  consultar_calendario.py  iniciar_oauth_google.py
src/chatbot/application/conhecimento/: __init__.py  buscar_conhecimento.py  sincronizar_kb.py
src/chatbot/application/conversa/: __init__.py  classificar_intencao.py  gerar_resposta.py  processar_mensagem.py  resposta_conversa.py
src/chatbot/application/financeiro/: __init__.py  consultar_proximo_pagamento.py
src/chatbot/application/matricula/: __init__.py  consultar_matricula.py
src/chatbot/application/observabilidade/: __init__.py  registrar_interacao.py
src/chatbot/domain/calendario/: __init__.py  audiencia.py  evento.py  oauth.py  ports.py
src/chatbot/domain/conhecimento/: __init__.py  chunking.py  documento.py  ports.py
src/chatbot/domain/conversa/: __init__.py  intencao.py  persona.py  ports.py  resposta_llm.py
src/chatbot/domain/financeiro/: __init__.py  pagamento.py  ports.py  status.py
src/chatbot/domain/matricula/: __init__.py  matricula.py  ports.py  status.py
src/chatbot/domain/observabilidade/: __init__.py  interacao.py  ports.py
src/chatbot/infrastructure/google/calendar/: fernet_oauth_store.py  google_calendar_adapter.py  mock_calendar_adapter.py  mock_oauth_client.py
src/chatbot/infrastructure/google/docs/: mock_kb_source.py
src/chatbot/infrastructure/llm/: gemini_embeddings.py  gemini_gateway.py  null_embeddings.py  null_gateway.py
src/chatbot/infrastructure/observabilidade/: logging.py  sqlalchemy_log.py
src/chatbot/infrastructure/persistence/: __init__.py  base.py  calendario_repository.py  engine.py  kb_repository.py  models.py
src/chatbot/infrastructure/sistema_academico/: mock_financeiro_repository.py  mock_matricula_repository.py
src/chatbot/interfaces/telegram_bot/: __main__.py
tests/integration/: conftest.py  test_calendario_repository.py  test_fernet_oauth_store.py  test_kb_repository.py  test_sqlalchemy_log.py
tests/unit/: conftest.py  test_adicionar_ao_google_calendar.py  test_buscar_conhecimento.py  test_calendario_domain.py  test_chunking.py  test_classificar_intencao.py  test_config.py  test_conhecimento_infra.py  test_consultar_calendario.py  test_conversa_domain.py  test_financeiro_domain.py  test_gerar_resposta.py  test_matricula_domain.py  test_mock_sistema_academico.py  test_null_llm_gateway.py  test_oauth_google_mock.py  test_oauth_use_cases.py  test_persistence.py  test_processar_mensagem.py  test_registrar_interacao.py  test_sincronizar_kb.py
