[project]
name = "chatbot-suporte-estudante"
version = "0.0.1"
description = "Chatbot do Telegram para suporte ao estudante: matrícula, pagamentos, calendário e base de conhecimento (RAG)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "DougOscar", email = "DougOscar@users.noreply.github.com" }]
keywords = ["telegram", "chatbot", "rag", "hexagonal", "ddd"]

# Dependências runtime — núcleo, independente do provedor de LLM.
# Adapters de LLM ficam como extras opcionais abaixo.
dependencies = [
    # Bot do Telegram
    "python-telegram-bot>=21,<23",
    # Banco + ORM async + driver Postgres + pool
    "sqlalchemy[asyncio]>=2.0,<3",
    "psycopg[binary,pool]>=3.2,<4",
    "alembic>=1.13,<2",
    # Vetores no Postgres (adapter para SQLAlchemy/psycopg)
    "pgvector>=0.3,<1",
    # Configuração e validação
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    # HTTP client (sistema acadêmico e afins)
    "httpx>=0.27,<1",
    # Logs estruturados
    "structlog>=24,<26",
    # Criptografia em repouso dos tokens OAuth
    "cryptography>=42",
    # Google APIs (Calendar + Docs + Drive)
    "google-api-python-client>=2,<3",
    "google-auth>=2,<3",
    "google-auth-oauthlib>=1,<2",
    "google-auth-httplib2>=0.2,<1",
]

[project.optional-dependencies]
# Provedores de LLM — instalar apenas o(s) usado(s) via `uv sync --extra <nome>`.
# Ver docs/03-Integracoes/LLM-Provedores.md
gemini = ["google-genai>=0.3"]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.50"]
groq = ["groq>=0.13"]
# Embeddings locais (alternativa gratuita aos embeddings de provedores pagos)
local-embeddings = ["sentence-transformers>=3"]

[project.urls]
Repository = "https://github.com/DougOscar/chatbot-suporte-estudante"
Documentation = "https://github.com/DougOscar/chatbot-suporte-estudante/tree/main/docs"

# =====================================================================
# uv — gerenciador de pacotes e ambiente
# =====================================================================
[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    # Lint + format
    "ruff>=0.7",
    # Type checking
    "mypy>=1.13",
    # Testes
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    # Mocks/fakes úteis em testes assíncronos
    "anyio>=4",
]

# =====================================================================
# Build backend
# =====================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot"]

# =====================================================================
# Ruff — lint + format
# =====================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Conjunto pragmático. Endurecer conforme o código cresce.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # comprehensions
    "ASYNC",
    "RUF",
]
ignore = [
    "E501",  # line-length já é gerenciado pelo formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =====================================================================
# mypy
# =====================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*", "pgvector.*"]
ignore_missing_imports = true

# =====================================================================
# pytest
# =====================================================================
[tool.pytest.ini_options]
minversion = "8"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: testes unitários (rápidos, sem rede/banco)",
    "integration: testes de integração (com banco real)",
    "e2e: testes ponta-a-ponta",
]
